fixing  report part

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -13,7 +13,6 @@
 \usepackage{graphicx}
 \usepackage{soul}
 \usepackage[colorlinks=true, linkcolor=blue]{hyperref}
-\usepackage[a4paper, width=150mm, top=25mm, bottom=25mm]{geometry}
 \usepackage{parskip}
 \usepackage{enumitem}
 \usepackage[final]{pdfpages}
@@ -21,8 +20,7 @@
 %\usepackage{titlesec}
 \usepackage{listings}
 \usepackage[final]{pdfpages}
-\usepackage[font=small,labelfont=bf]{caption} % Required for specifying captions to tables and figures
-\setlist[itemize]{label=\textbullet}
+\usepackage[=small,labelfont=bf]{caption} % Required for specifying captions to tables and figures
 \usepackage[linesnumbered,algoruled,french,onelanguage]{algorithm2e}
 \usepackage{url}
 \usepackage{amsmath}
@@ -51,6 +49,10 @@
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 \def \hfillx {\hspace*{-\textwidth} \hfill}
+\definecolor{Magenta}{RGB}{255,0,255}
+
+
+
 
 
 \begin{document}
