--- a/Report/chapter3.tex
+++ b/Report/chapter3.tex
@@ -1,2 +1,3 @@
-\chapter{Test sur une base de connaissance}
-\section{NO FREAKING IDEA }
+\section{Interface modifié}
+\paragraph{}
+L'interface de base n'étant pas appropriée à notre besoin, nous avons décide de la modifier et la rendre adaptée au domaine choisi, plus de détails seront donnée dans la partie suivante
