--- a/Report/chapter6.tex
+++ b/Report/chapter6.tex
@@ -1,3 +1,3 @@
 \chapter{Application dédiée}
 \section{Interface homme-machine}
-\section{sahel oumba3d nzid stuff}
+\section{Backend(Base de données)}
