fixing  report parts

--- a/Report/chapter2.tex
+++ b/Report/chapter2.tex
@@ -57,10 +57,10 @@ Le système expert de base qui nous a été demandé d'améliorer était très l
 \subsection{Typage des variables}
 L'inconvénient en travaillant seulement avec des String est le manque de flexibilité des valeurs, nous avons donc subdivisé le typage en 4 groupes : \\
 \begin{itemize}[label=\textbullet, font=\color{black}]
-	\item StringVariableValue : Type basique, généralement la plus part des variables ont ce type, il peut désigner un catégorie, un nom, une propriété nominale ... etc.
-	\item IntegerVariableValue : Type basique pour désigner les valeurs discrètes telle que le nombre l'age.
-	\item DoubleVariableValue : Type basique pour désigner les valeurs continues(beaucoup plus fréquentes) telles que le prix, la température ... etc
-	\item IntervalUnion : Type complexe pour désigner tout séquence de valeur non dénombrable comme l'union de plusieurs intervalles([0,2]$\cup$[5,22]$\cup$[55,69[), une valeur minimum(value>min) our maximum ... etc
+	\item \textbf{StringVariableValue} : Type basique, généralement la plus part des variables ont ce type, il peut désigner un catégorie, un nom, une propriété nominale ... etc.
+	\item \textbf{IntegerVariableValue} : Type basique pour désigner les valeurs discrètes telle que le nombre l'age.
+	\item \textbf{DoubleVariableValue} : Type basique pour désigner les valeurs continues(beaucoup plus fréquentes) telles que le prix, la température ... etc
+	\item \textbf{IntervalUnion} : Type complexe pour désigner tout séquence de valeur non dénombrable comme l'union de plusieurs intervalles([0,2]$\cup$[5,22]$\cup$[55,69[), une valeur minimum(value>min) our maximum ... etc
 \end{itemize}
 
 \subsection{Introduction de nouvelles conditions}
