--- a/Report/chapter9.tex
+++ b/Report/chapter9.tex
@@ -1,3 +1,5 @@
 \chapter{Comparaison avec la plateforme JADE}
 \section{Principales différence}
-\section{Le critère de décision}
+\paragraph{}
+JADE et JASON sont très différents dans leur conceptualisation, l'un utilise le langage java comme interprète des actions entre agent et l'autre un langage d'abstraction plus adapté à ces dites communications.
+Leurs domaine d'application sont assez différents, il JADE sera préféré en cas de communication simple entre agents sans qu'il y ait besoin de réaliser un traitement d'inférence localement, JASON quant à lui se démarque par le fait qu'il peut lui aussi assurer une communication entres plusieurs agents et offre en plus un environnement adéquat pour l'inférence grâce à l'utilisation du langage AgentSpeak. 
