committing report last parts

--- a/Report/chapter2Conclusion.tex
+++ b/Report/chapter2Conclusion.tex
@@ -1,1 +1,2 @@
 \section{Conclusion}
+Nous avons vu dans cette partie la conception d’un système multi-agent dans le domaine commercial. Cela a été fait en décomposant un traitement complexe en tâches simples affectées à des agents, ce qui a résulté en un comportement efficace. Ensuite une démonstration du système a été faite en utilisant une application qui l’utilise.
